# lets-build-gpt

./: README.md  notes.ipynb  pyproject.toml
